Github-page: fix (.interest { alignment issue } && update my qualification and details
* Adjust rounded corner padding of (.navbar-mobile ul a lit bit)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0;
   overflow-y: auto;
   transition: 0.3s;
-  border-radius: 30px;
+  border-radius: 20px;
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -418,7 +418,7 @@ section .container {
 }
 
 .about-me .content ul li {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   display: flex;
   align-items: center;
 }
@@ -428,10 +428,10 @@ section .container {
 }
 
 .about-me .content ul i {
-  font-size: 16px;
-  margin-right: 5px;
+  font-size: 15px;
+  margin-right: 15px;
   color: #ff0000;
-  line-height: 0;
+  line-height: 1.5;
 }
 
 .about-me .content p:last-child {
